--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/app.js",
   "scripts": {
     "dev": "tsnd --respawn --clear src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": " rimraf ./dist && tsc",
+    "start": "node dist/server.js"
   },
   "keywords": [
     "br1Lisboa"
